# mlite

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude/commands/: review_pr.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: pr_review.yml
mlite/: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
mlite/docs/: eval-baseline.md  eval-design.md
mlite/mlite/: __init__.py  cli.py  mcp_server.py  tool.py
mlite/mlite/adapters/: __init__.py  base.py  html.py  markdown.py  py_adapter.py
mlite/scripts/: corpus_sources.json  fetch_corpus.py  generate_qa.py  run_eval.py
mlite/tests/: test_cli.py  test_corpus.py  test_html.py  test_integration.py  test_markdown.py  test_mcp_e2e.py  test_mcp_server.py  test_python.py  test_tool.py
mlite/tests/corpus/: axios_axios.md  dbt_core.md
mlite/tests/fixtures/: basic.html  basic.md  basic.mlt  basic.qa.json  code_heavy.md  code_heavy.mlt  code_heavy.qa.json  emphasis.html  emphasis.md  emphasis.mlt  emphasis.qa.json  emphasis_html.mlt  links_images.html  links_images_html.mlt  nested.md  nested.mlt  nested.qa.json  sample.py  sample_python.mlt  sample_python_extract.mlt  table.html  table.md  table.qa.json  table_html.mlt
scripts/: review_pr.py
