[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlite"
version = "0.1.0"
description = "AI-first token-efficient text transmission format"
readme = "SPEC.md"
requires-python = ">=3.11"
dependencies = [
    "mistune>=3.0",
    "beautifulsoup4>=4.12",
    "fastmcp>=0.1",
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tiktoken",
]

[project.scripts]
mlite = "mlite.cli:main"
mlite-mcp = "mlite.mcp_server:run"
