[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlite"
version = "0.1.0"
description = "AI-first token-efficient text transmission format"
readme = "SPEC.md"
requires-python = ">=3.11"
dependencies = [
    "mistune>=3.0",
    "beautifulsoup4>=4.12",
    "fastmcp>=0.1",
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tiktoken",
]
eval = [
    "anthropic>=0.84",
    "tiktoken",
]

[project.scripts]
mlite = "mlite.cli:main"
mlite-mcp = "mlite.mcp_server:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run everything by default.  Use -m "not corpus" to skip the stress tests.
markers = [
    "corpus: real-world Markdown savings stress test",
    "integration: live Anthropic API calls — requires ANTHROPIC_API_KEY",
]
